<resources>
    <string name="app_name">CafeApplication</string>
    <string name="landing_page_image">Coffee Cart</string>
    <string name="landing_page_email_label">Email</string>
    <string name="landing_page_button_text">Get Started</string>
    <string name="landing_page_example_email_text">example@gmail.com</string>
    <string name="landing_page_hero_text">All ingredients are locally sourced</string>
    <string name="loginTitle">Login</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_menu">MenuActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_order_list_view_component">OrderListViewComponent</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="continue_btn">Continue</string>
    <string name="login_btn">Login</string>
    <string name="email_label">Email</string>
    <string name="enter_your_e_mail_address">Enter your e-mail address</string>
    <string name="password_label">Password</string>
    <string name="register_title">Create Account 🧙</string>
    <string name="skip_btn">Skip</string>
    <string name="finish_btn">Finish</string>
    <string name="phone_number_hint">Enter your phone number</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="last_name_hint">Enter your last name</string>
    <string name="last_name_label">Last Name</string>
    <string name="first_name_hint">Enter your first name</string>
    <string name="first_name_label">First Name</string>
    <string name="create_profile_subheading">You\'re almost there!</string>
    <string name="create_profile_heading">Complete Your Profile 😎</string>
    <string name="coffee_shop">COFFEE SHOP</string>
    <string name="main_subheading">DISCOVER YOUR NEW FAVOURITE COFFEE SHOP WITH BLENDS FROM AROUND THE GLOBE</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="create_your_profile">Create Your Profile 🧙</string>
    <string name="you_re_almost_there">You\'re almost there!</string>
    <string name="username_taken">Username is taken!</string>
</resources>