<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.common.profile.CompleteProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/first_name_label"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="name"
            android:ems="10"
            android:hint="@string/first_name_hint"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lblLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/last_name_label"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="name"
            android:ems="10"
            android:hint="@string/last_name_hint"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lblPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/phone_number_label"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="phone"
            android:ems="10"
            android:hint="@string/phone_number_hint"
            android:inputType="phone" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCreateProfile"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/finish_btn"
        android:theme="@style/ButtonGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>